--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "49057fa9-d513-5ef6-ae80-2dc68a70a2bd"
 version = "0.0.0"
 
 [deps]
+Accessors = "7d9f7c33-5ae7-4f3b-8dc6-eff91059b697"
+MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
+PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 
 [compat]
-julia = "1"
+julia = "1.6"
+Accessors = "0.1"
+MacroTools = "0.5"
+PrecompileTools = "1"
